--- a/assets/header.scss
+++ b/assets/header.scss
@@ -51,7 +51,6 @@ header {
         }
 
         .phone-menu {
-            display: none;
             border: none;
             margin: 0px;
             padding: 0px;
@@ -104,14 +103,23 @@ header {
 
                     &>li {
                         position: relative;
-                        padding: 30px 0px;
-                        margin: 0px 20px;
+                        padding: 16px 0px;
+                        margin: 0px 8px;
+                        display: inline-block;
+
+                        &:not(.nav-btn) > a {
+                            padding: 16px 12px;
+                            border-radius: 27px;
+                            -webkit-border-radius: 27px;
+                            &:focus {
+                                outline: none;
+                                border: 2px solid #fff;
+                                padding: 14px 10px;
+                            }
+                        }
 
                         &.nav-btn {
-                            padding: 14px 0px;
-
-                            &>a {
-                                display: inline-block;
+                            & > a {
                                 background-color: #fff;
                                 color: #30B6FF;
                                 padding: 16px 20px;
@@ -132,6 +140,8 @@ header {
                             color: #ffffff;
                             font-size: 16px;
                             font-weight: 600;
+                            padding: 16px 0;
+                            display: inline-block;
 
                             &:hover {
                                 opacity: 0.7;
@@ -174,6 +184,7 @@ header {
                                 margin: 0px 0px 20px;
 
                                 a {
+                                    padding: 0px;
                                     display: inline-flex;
                                     flex-direction: row;
                                     align-items: center;
@@ -246,8 +257,64 @@ header {
                             }
                         }
                     }
+
+                    @media (max-width: $xl-breakpoint) {
+                        justify-content: flex-start;
+                        padding: 30px 0px 0px;
+                        flex-direction: column;
+
+
+                        & > li {
+                            margin: 0px;
+                            padding: 10px 0px;
+
+                            margin: 0px 8px;
+                            display: inline-block;
+
+                            &:not(.nav-btn) > a {
+                                padding: 6px 6px;
+                                &:focus {
+                                    padding: 4px 4px;
+                                }
+                            }
+
+                            & > .sub-menu {
+                                position: relative;
+                                left: 0px;
+                                width: 100%;
+                                max-width: 320px;
+                                margin: 20px 0px 0px;
+                                padding: 20px 15px 1px;
+
+                                &:before {
+                                    left: 20px;
+                                    margin: 0px;
+                                }
+                            }
+                        }
+                    }
                 }
             }
+        }
+    }
+    @media (max-width: $xl-breakpoint) {
+        padding: 12px 0px;
+        overflow-y: scroll;
+
+        .header-holder .header-items {
+            flex: 0 0 100%;
+            max-width: 100%;
+            display: none;
+        }
+    }
+
+    @media (min-width: $xl-breakpoint) {
+        .phone-menu {
+            display: none;
+        }
+
+        .header-holder .header-items {
+            display: block;
         }
     }
 }
