Simplify a bit the deployment
Wordpress theme editor doesn't allow to add new file so create the
config.php file already

Signed-off-by: Carl Schwan <carl@carlschwan.eu>

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Nextcloud Theme
+Theme Name: Nextcloud Theme Git
 Author: Hipinspire
 Author URI: https://www.hipinspire.com/
 Version: 1.0
