Fix aligment of the title
Signed-off-by: Carl Schwan <carl@carlschwan.eu>

--- a/assets/forms.scss
+++ b/assets/forms.scss
@@ -15,7 +15,7 @@
 .nf-form-title {
     text-align: center;
     max-width: 600px !important;
-    margin: 3rem 0 1rem 0;
+    margin: 3rem auto 1rem auto;
 }
 
 .nf-form-content {
