Fill the forms automatically with whitepaper link and title
Signed-off-by: Carl Schwan <carl@carlschwan.eu>

--- a/assets/forms.scss
+++ b/assets/forms.scss
@@ -93,6 +93,10 @@
             font-size: 12px;
         }
 
+        .nf-form-title {
+            margin: 0 !important;
+        }
+
         .nf-form-fields-required {
             display: none;
         }
