Fix whitepaper form
Signed-off-by: Carl Schwan <carl@carlschwan.eu>

--- a/assets/forms.scss
+++ b/assets/forms.scss
@@ -60,6 +60,14 @@
         margin: 0px;
     }
 
+    .nf-before-form-content {
+        padding: 0px;
+    }
+
+    .nf-before-form {
+        display: none;
+    }
+
     .post-body {
         margin: 0px;
         padding: 20px 20px 25px;
