Fix most accessibility issues with menus
- Add keyboard navigation focus
- Allow to open menu with the keyboard only

Signed-off-by: Carl Schwan <carl@carlschwan.eu>

--- a/assets/footer.scss
+++ b/assets/footer.scss
@@ -80,6 +80,9 @@ footer {
 
                         a {
                             font-weight: 400;
+                            &:focus, &:hover {
+                                text-decoration: underline;
+                            }
                         }
                     }
                 }
