--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -101,11 +101,16 @@ p {
         text-decoration: none;
     }
 
+    &:focus {
+        border: 2px solid white;
+        outline: none;
+    }
+
     &.btn-blue {
         background-color: #30B6FF;
         border-color: #30B6FF;
 
-        &:hover {
+        &:hover, &:focus {
             color: #30B6FF;
             background-color: #fff;
         }
@@ -116,7 +121,7 @@ p {
         background-color: #fff;
         border-color: #30B6FF;
 
-        &:hover {
+        &:hover, &:focus {
             color: #fff;
             background-color: #30B6FF;
         }
@@ -127,7 +132,7 @@ p {
         background-color: #0F0833;
         border-color: #0F0833;
 
-        &:hover {
+        &:hover, &:focus {
             color: #0F0833;
             background-color: #fff;
         }
