--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -6490,6 +6490,13 @@ p {
             flex-wrap: wrap;
             justify-content: center;
 
+            a:focus, a:hover {
+                text-decoration: underline;
+                text-decoration-color: white;
+                text-decoration-thickness: 2px;
+                outline: none;
+            }
+
             li {
                 color: #fff;
                 font-size: 18px;
@@ -6538,9 +6545,23 @@ p {
     .share-block {
         padding: 40px 0px 0px;
         text-align: center;
+        display: flex;
+        justify-content: center;
 
         a {
             margin: 0px 15px;
+            background-repeat: no-repeat;
+            display: block;
+            overflow: hidden;
+            height: 40px;
+            line-height: 32px;
+            padding: 4px;
+            width: 40px;
+            &:focus {
+                box-shadow: 0 0 0 2px white;
+                outline: none;
+                border-radius: 50%;
+            }
         }
     }
 }
