Better handling of empty image in quote block
Signed-off-by: Carl Schwan <carl@carlschwan.eu>

--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -1803,7 +1803,7 @@ p {
 
 .squote-section {
     position: relative;
-    padding: 125px 0px;
+    padding: 0;
     margin-bottom: 75px;
     z-index: 1;
 
