Add unique id to menu to fix issues with translations
Signed-off-by: Carl Schwan <carl@carlschwan.eu>

--- a/assets/header.scss
+++ b/assets/header.scss
@@ -90,7 +90,7 @@ header {
             flex-direction: row;
             align-items: center;
 
-            .menu-primary-menu-container {
+            #menu-primary-menu-container {
                 flex: 1;
 
                 .primary-menu {
