Add unique id to footer menu
Signed-off-by: Carl Schwan <carl@carlschwan.eu>

--- a/assets/footer.scss
+++ b/assets/footer.scss
@@ -36,7 +36,7 @@ footer {
         }
     }
 
-    .menu-footer-menu-container {
+    #menu-footer-menu-container {
         padding: 50px 0px 40px 155px;
 
         .footer-menu {
