--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -7747,7 +7747,7 @@ p {
 }
 
 @media (max-width: 1399.98px) {
-    footer .menu-footer-menu-container {
+    footer #menu-footer-menu-container {
         padding: 50px 0px 40px 120px;
     }
 }
