--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -161,6 +161,19 @@ p {
         }
     }
 
+
+    &.btn-main {
+        border: 2px solid #0082c9;
+        background-color: #0082c9;
+        color:#fff;
+
+        &:hover {
+            color: #0082c9;
+            background-color: #fff;
+        }
+
+    }
+
 }
 
 
@@ -371,6 +384,9 @@ p {
             font-weight: 600;
             line-height: 166.2%;
             margin: 0px 0px 30px;
+
+
+            
         }
     }
 }
@@ -5734,12 +5750,24 @@ p {
             align-items: center;
             justify-content: center;
 
+            //when text it´s outside of p
+            color: #263238;
+            font-size: 18px;
+            line-height: 210.2%;
+            text-align: center;
+            margin-bottom: 20px;
+
             p {
                 color: #263238;
                 font-size: 18px;
                 line-height: 210.2%;
                 text-align: center;
+
+                a.c-btn {
+                    margin-top: 20px;
+                }
             }
+
         }
     }
 
@@ -8511,4 +8539,123 @@ p {
   -webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.25);
   -moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.25);
   box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.25);
+}
+
+
+.vc_section {
+    position: relative;
+
+    &.titlebar {
+        padding-top: 11rem !important;
+        padding-bottom: 1rem !important;
+        
+
+        .overlay-gradient {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(45deg, $mainColor 20% ,rgba(0, 130, 201, 0.15) );
+            top: 0;
+            left: 0;
+        }
+
+
+        &.government {
+            background-size: 70% auto;
+            background-repeat: no-repeat;
+            background-position: center right;
+
+            @media screen and (max-width: $md-breakpoint) {
+                &{
+                    background-size: cover;
+                }
+            }
+        }
+
+        .page-title{
+            margin-bottom: 15px !important;
+
+            h1 {
+                color: #fff;
+                font-weight: 800;
+                font-size: 3rem;
+                line-height: 3.3rem;
+
+                @media screen and (max-width: $md-breakpoint) {
+                    &{
+                        font-size: 2rem;
+                        line-height: 2.3rem;
+                    }
+                }
+
+
+            }
+        }
+
+        .page-subtitle {
+            color: #fff;
+        }
+
+    }
+
+
+    &.vertical-page-intro {
+
+        padding-top: 4rem;
+        padding-bottom: 4rem;
+
+        background-repeat: no-repeat;
+        background-size: 80% auto;
+        background-position: center top 30%;
+
+        .intro-title {
+            h2 {
+                font-size: 2rem;
+
+                strong {
+                    color: $mainColor;
+                }
+            }
+        }
+    }
+
+}
+
+
+.main-color{
+    color: $mainColor; 
+}
+
+.text-right {
+    text-align: right;
+}
+
+.centered {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+.iconboxes {
+
+    .iconbox {
+        background: #fff;
+        border-radius: 15px;
+        padding: 1rem;
+        //margin: 0.5rem;
+    }
+}
+
+ul.nc-list {
+    li{
+        list-style-type: none;
+        padding-left: 12px;
+
+        &:before {
+            position: relative;
+            content: "";
+            font-family: "FontAwesome";
+        }
+    }
 }
