--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -6,3 +6,9 @@ $sm-breakpoint: 575.98px;
 $md-breakpoint: 767.98px;
 $xl-breakpoint: 1199.98px;
 $mainColor: #0082c9;
+$lightColor: #1cafff;
+$textColor: #191717;
+$communityColor: rgb(219, 237, 248);
+$successColor: #42E553;
+$errorColor: #FE5252;
+$lightBG: rgba(0,130,201,0.14);
