--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -4,6 +4,7 @@
 $xs-breakpoint: 399.98px;
 $sm-breakpoint: 575.98px;
 $md-breakpoint: 767.98px;
+$tablet-breakpoint: 991px;
 $xl-breakpoint: 1199.98px;
 $mainColor: #0082c9;
 $lightColor: #1cafff;
