--- a/assets/footer.scss
+++ b/assets/footer.scss
@@ -10,12 +10,19 @@ footer {
 
     .footer-logo {
         width: 100%;
-        max-width: 88px;
+        max-width: 105px;
         margin: 0px auto;
+        padding-top: 2rem;
 
         img {
             max-width: 100%;
             height: auto;
+        }
+
+        @media (max-width: $tablet-breakpoint) {
+            & {
+                margin-bottom: 2rem;
+            }
         }
     }
 
@@ -29,23 +36,23 @@ footer {
         padding: 35px 0px 15px;
 
         p {
-            color: rgba(255, 255, 255, 0.21);
+            color: rgba(255, 255, 255, 0.50);
             font-size: 13px;
-            font-weight: 600;
+            /*font-weight: 600;*/
             margin: 0px;
         }
     }
 
     #menu-footer-menu-container {
-        padding: 50px 0px 40px 155px;
+        //padding: 50px 0px 40px 155px;
 
         .footer-menu {
             padding: 0px;
             margin: 0px;
             list-style: none;
             display: flex;
-            flex-direction: row;
-            justify-content: center;
+            //flex-direction: row;
+            justify-content: flex-end;
 
             @media (max-width: $xs-breakpoint) {
                 flex-wrap: wrap;
@@ -53,23 +60,33 @@ footer {
                 li {
                     width: 100%;
                     ul {
-                        padding: 10px 0px 50px;
+                        //padding: 10px 0px 50px;
                     }
                 }
             }
 
-            li {
+            & > li {
                 flex: 0 0 auto;
                 margin-bottom: 10px;
-                width: 20%;
+                //width: 30%;
+                //padding: 1rem 2rem;
+                
+
+                @media (min-width: $tablet-breakpoint) {
+                    & {
+                        padding: 0 3rem;
+                    }
+                }
 
                 a {
                     color: #fff;
                     font-size: 13px;
                     font-weight: 600;
+                    padding: 8px;
+                    display: block;
                 }
 
-                ul {
+                ul.sub-menu {
                     padding: 10px 0px 0px;
                     margin: 0px;
                     list-style: none;
@@ -77,6 +94,7 @@ footer {
                     li {
                         display: block;
                         width: 100%;
+                        //padding: 9px;
 
                         a {
                             font-weight: 400;
@@ -90,12 +108,14 @@ footer {
         }
 
         @media (max-width: 1199.98px) {
-            padding: 50px 0px 40px 0px;
+            
+            //padding: 50px 0px 40px 0px;
 
             .footer-menu li {
                 width: 33.3333333333333333%;
                 text-align: center;
             }
+
         }
     }
 
@@ -116,20 +136,29 @@ footer {
             li {
                 margin: 0px 0px 15px 30px;
 
-                img {
-                    max-width: 20px;
-                    max-height: 20px;
-                    width: auto;
-                    height: auto;
-                }
-
                 a {
+                    opacity: 0.5;
+                    transition: all 0.3s ease;
+
                     &:hover {
-                        opacity: 0.7;
+                        opacity: 1;
                     }
+
+                    img {
+                        max-width: 20px;
+                        max-height: 20px;
+                        width: auto;
+                        height: auto;
+                    }
+
                 }
             }
         }
     }
 }
 
+@media (max-width: 1399.98px) {
+    footer #menu-footer-menu-container {
+       //padding: 50px 0px 40px 120px;
+    }
+}
