--- a/assets/header.scss
+++ b/assets/header.scss
@@ -211,27 +211,86 @@ header {
                             padding: 16px 12px;
                             border-radius: 27px;
                             -webkit-border-radius: 27px;
+
+                            /*
                             &:focus {
                                 outline: none;
                                 border: 2px solid #fff;
                                 padding: 14px 10px;
                             }
+                            */
                         }
 
                         &.nav-btn {
                             & > a {
                                 background-color: #fff;
-                                color: #30B6FF;
+                                color: $textColor;
                                 padding: 16px 20px;
                                 border-radius: 27px;
                                 -webkit-border-radius: 27px;
+                                transition: all 0.3s ease;
 
+
+                                /*
                                 &:focus {
                                     border: 2px solid black;
                                     padding: 14px 18px;
                                     outline: none;
                                 }
+                                */
+
+                                &:hover {
+                                    background-color: $mainColor;
+                                    color: #fff;
+                                }
+
                             }
+
+                            &.open {
+                                & > a {
+                                    background-color: $mainColor;
+                                    color: #fff;
+                                }
+                            }
+
+                        }
+
+                        &.download {
+                            & > a {
+                                padding-left: 15px;
+
+                                &:before {
+                                    position: relative;
+                                    content: "\f381";
+                                    font-family: 'Font Awesome 5 Free';
+                                    font-weight: 900;
+                                    margin-right: 10px;
+                                    color: $textColor;
+                                }
+
+                                &:hover {
+                                    color: #fff;
+
+                                    &:before {
+                                        color: #fff;
+                                    }
+
+
+                                }
+                            }
+
+                            &.open {
+                                & > a {
+                                    background-color: $mainColor;
+                                    color: #fff;
+
+                                    &:before {
+                                        color: #fff;
+                                    }
+
+                                }
+                            }
+
                         }
 
                         &.menu-item-has-children {
@@ -253,11 +312,49 @@ header {
                             font-weight: 600;
                             padding: 16px 0;
                             display: inline-block;
+                            position: relative;
+                        }
 
-                            &:hover {
-                                opacity: 0.7;
+                        &:not(.nav-btn) {
+                            a {
+                                color: #ffffff;
+                                font-size: 16px;
+                                font-weight: 600;
+                                //padding: 16px 0;
+                                display: inline-block;
+                                position: relative;
+    
+                                @media screen and (min-width: $xl-breakpoint) {
+                                    &:after {
+                                        content: "";
+                                        position: absolute;
+                                        bottom:6px;
+                                        left: 12px;
+                                        height: 2px;
+                                        width: 0px;
+                                        background-color: #fff;
+                                        transition: all 0.3s ease;
+                                    }
+                                }
+    
+                                &:hover {
+                                    //opacity: 0.7;
+                                    &:after {
+                                        width: 24px;
+                                    }
+                                }
+                            }
+
+                            &.current-menu-parent {
+                                a {
+                                    &:after {
+                                        width: 24px;
+                                    }
+                                }
                             }
                         }
+
+                        
 
                         >.sub-menu {
                             display: none;
